force-app/main/default/objects/Crash_Occurrence__c/Crash_Occurrence__c.object-meta.xml
<CustomObject>
    <label>Crash Occurrence</label>
    <pluralLabel>Crash Occurrences</pluralLabel>
    <nameField>
        <label>Occurrence ID</label>
        <type>AutoNumber</type>
        <displayFormat>OCC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>