force-app/main/default/objects/Crash_Occurrence__c/fields/Crash_Incident__c.field-meta.xml
<CustomField>
    <fullName>Crash_Incident__c</fullName>
    <label>Crash Incident</label>
    <type>Lookup</type>
    <referenceTo>Crash_Incident__c</referenceTo>
    <relationshipName>Occurrences</relationshipName>
    <relationshipLabel>Occurrences</relationshipLabel>
</CustomField>