force-app/main/default/objects/Crash_Occurrence__c/fields/Hardware_Model__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Model__c</fullName>
    <label>Hardware Model</label>
    <type>Text</type>
    <length>100</length>
</CustomField>