force-app/main/default/objects/Crash_Occurrence__c/fields/Mac_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Mac_User_ID__c</fullName>
    <label>Mac User ID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>